--- a/newPrideMore/wwwroot/css/site.css
+++ b/newPrideMore/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿/* P
+    <link rel="stylesheet" href="~/css/site.css" />lease see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
@@ -44,7 +45,7 @@ html {
 }
 
 button.accept-policy {
-  font-size: 1rem;
+  font-size: 18px;
   line-height: inherit;
 }
 
@@ -66,8 +67,4 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
-}
-a {
-    text-decoration: none;
-    
 }
